# MusicManager

./: .env.dist  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml  music-manager.code-workspace  tasks.json  workspace.code-workspace
clients/android/app/: build.gradle
clients/android/app/src/main/: AndroidManifest.xml
clients/android/gradle/wrapper/: gradle-wrapper.properties
clients/mobile/: App.js  app.json  package.json
clients/mobile/android/: local.properties
clients/mobile/android/app/: build.gradle  expo.gradle  google-services.json
clients/mobile/constants/: Colors.js
clients/mobile/navigation/: AppNavigator.js  MainTabNavigator.js
clients/mobile/screens/: AlbumsScreen.js  HomeScreen.js  PlaylistScreen.js  QueueScreen.js  SongScreen.js
clients/src.old/: App.js
clients/src.old/components/: AudioPlayer.js  Sidebar.js  Topbar.js
clients/web/: Dockerfile  package.json  tsconfig.prod.json  tslint.json
clients/web/public/: index.html
clients/web/src/: App.css  App.tsx  animations.css  index.css  index.tsx
clients/web/src/components/: AlbumView.css  AlbumView.tsx  ArtistView.css  ArtistView.tsx  AudioPlayer.tsx  MenuBar.tsx  PlaylistSongView.tsx  PlaylistView.tsx  QueueView.tsx  SongView.tsx
clients/web/src/services/: LibraryService.ts  PlaylistService.ts
conf/systemd/: apiserver.service  staticfiles.service  taskrunner.service  webclient.service  xvfb.service
libraries/core/: Cargo.toml
libraries/core/src/: lib.rs
libraries/core/src/services/: library.rs  mod.rs  youtube.rs
libraries/data/: Cargo.toml
libraries/data/migrations/2019-01-15-201605_add_album_image/: up.sql
libraries/data/src/: models.rs
libraries/data/src/repos/: album.rs  artist.rs  mod.rs  song.rs
server/: Cargo.toml  Makefile  Rocket.toml  docker-compose.yml  startup.sh
server/api/: Cargo.toml
server/api/src/: main.rs
server/images/taskrunner/: Dockerfile.debug  Dockerfile.release
server/libraries/core/: Cargo.toml
server/libraries/core/src/services/: library.rs  youtube.rs
server/libraries/data/: Cargo.toml
server/libraries/data/migrations/2019-01-15-200610_create_albums/: up.sql
server/libraries/data/migrations/2019-01-15-201605_add_album_image/: down.sql
server/libraries/data/migrations/2019-01-15-202702_add_externalids/: down.sql
server/libraries/data/src/: lib.rs  migrations.rs  models.rs
server/libraries/data/src/repos/: album.rs  artist.rs  mod.rs  playlist.rs  playlistsong.rs  song.rs  task.rs
server/libraries/musiccore/: Cargo.toml
server/libraries/musiccore/src/services/: task.rs
server/tools/cli/: Cargo.toml
server/tools/cli/src/: main.rs
server/tools/cli/src/commands/: music.rs
server/tools/scraper/: Dockerfile
server/tools/scraper/src/: main.rs
server/tools/scraper/src/scripts/: album.js  album_image.js  artist_image.js  songs.js
server/tools/task-runner/: Cargo.toml
server/tools/task-runner/src/: lib.rs  main.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/commands/: db.rs  music.rs
src/core/: Cargo.toml
src/core/src/: entities.rs  lib.rs
src/core/src/downloader/: client.rs  errors.rs  format.rs  format_list.rs  mod.rs  video_info.rs
src/core/src/services/: library.rs  mod.rs  music.rs  task.rs  youtube.rs
src/data/: Cargo.toml
src/data/migrations/2019-01-10-194831_create_tasks/: up.sql
src/data/migrations/2019-01-15-200412_create_artists/: up.sql
src/data/migrations/2019-01-15-201124_create_songs/: up.sql
src/data/migrations/2019-01-15-202702_add_externalids/: up.sql
src/data/src/: lib.rs  migrations.rs  models.rs  schema.rs
src/data/src/repos/: album.rs  artist.rs  mod.rs  song.rs  task.rs
src/scraper/: Cargo.toml
src/scraper/src/: main.rs
src/scraper/src/scripts/: album.js  songs.js
src/task-runner/: Cargo.toml
src/task-runner/src/: main.rs
src/web/: Cargo.toml
src/web/src/: main.rs
src/web/www/public/: music
src/web/www/src/: App.js
static/: Dockerfile  docker-compose.yml  nginx.conf
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
tools/scraper/src/: main.rs
tools/scraper/src/scripts/: album.js  songs.js
tools/task-runner/src/: lib.rs  main.rs
web/: Cargo.toml  package.json
web/src/: main.rs
web/www/: package-lock.json.old  package.json
web/www/public/: index.html
web/www/src/: App.js  index.css  index.js
web/www/src/components/: AlbumCard.js  ArtistCard.js  AudioPlayer.js  PageHeading.js  Sidebar.js
(+11 files in other folders)
