[package]
name = "data"
version = "0.1.0"
authors = ["jason"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
chrono = "0.4.6"
barrel = { path = "../../thirdparty/barrel", features = ["mysql"]}
mysql = "*"
mysql_common = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_derive = "1.0.84"
serde = "1.0.84"
serde_json = "1.0.35"