[package]
name = "api"
version = "0.1.0"
authors = ["Jason Miesionczek <atmospherian@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
rocket_cors = "0.4.0"
data = {path = "../libraries/data"}
musiccore = {path = "../libraries/musiccore"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.13.0"
mysql = "16.0.2"
