[package]
name = "cli"
version = "0.1.0"
authors = ["jason"]
edition = "2018"

[dependencies]
data = { path = "../data"}
core = { path = "../core" }
diesel = { version = "1.3.3", features = ["mysql", "chrono"] }
chrono = "0.4.6"
pbr = "1.0.1"
openssl = "0.10.16"
openssl-probe = "0.1.2"
log = "0.4.6"
env_logger = "0.6.0"
url = "1.7.2"
reqwest = "0.9.8"
serde_derive = "1.0.84"
serde = "1.0.84"
serde_json = "1.0.35"
uuid = "0.7"
