[package]
name = "core"
version = "0.1.0"
authors = ["jason"]
edition = "2018"

[dependencies]
openssl = "0.10.16"
data = {path = "../data"}
clippy = {version = "0.0.144", optional = true}
clap = "2.25.1"
log = "0.4.6"
env_logger = "0.4.3"
url = "1.5.1"
reqwest = "0.9.8"
lazy_static = "0.2.8"
serde_derive = "1.0.84"
serde = "1.0.84"
serde_json = "1.0.35"
pbr = "1.0.1"
openssl-probe = "0.1.2"
error-chain = "0.12"
env-variables = "0.1.1"
dotenv = "0.13.0"
mysql = "15.0.0"
