[package]
name = "core"
version = "0.1.0"
authors = ["jason"]
edition = "2018"

[dependencies]
data = {path = "../data"}
clippy = {version = "0.0.144", optional = true}
clap = "2.25.1"
log = "0.4.6"
env_logger = "0.4.3"
url = "1.5.1"
lazy_static = "0.2.8"
serde_derive = "1.0.84"
serde = "1.0.84"
serde_json = "1.0.35"
pbr = "1.0.1"
env-variables = "0.1.1"
dotenv = "0.13.0"
mysql = "16.0.2"
