[package]
name = "task-runner"
version = "0.1.0"
authors = ["Jason Miesionczek <atmospherian@gmail.com>"]
edition = "2018"

[dependencies]
data = {path = "../../libraries/data"}
core = { path = "../../libraries/core" }
chrono = "0.4.6"
pbr = "1.0.1"
openssl = "0.10.16"
openssl-probe = "0.1.2"
log = "0.4.6"
simple_logger = "1.0.1"
url = "1.7.2"
reqwest = "0.9.8"
serde_derive = "1.0.84"
serde = "1.0.84"
serde_json = "1.0.35"
uuid = "0.7"
clap = "2.32.0"
prettytable-rs = "0.8.0"
mysql = "16.0.2"
dotenv = "0.13.0"
id3 = "0.3.0"